--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -29,7 +29,7 @@
                     <div class="card-header">How To Search By Name</div>
                         <div class="card-body">
                             <p class="card-text">Search by name case insensitive, exact or approximate spelling accepted.</p>
-                            <footer class="blockquote-footer">Example: Search 'ponder' for the card "Ponder"</footer>
+                            <footer class="blockquote-footer">Example: Search 'blood moon' for the card "Blood Moon".</footer>
                         </div>
                     </div>
                 <!--</div>-->
@@ -39,7 +39,7 @@
                     <div class="card-header">How To Search By Color</div>
                         <div class="card-body">
                             <p class="card-text">Accepts full color names like blue or the abbreviated color letters w, u, r, b and g.</p>
-                            <footer class="blockquote-footer">Example: Search 'rg' for cards that are red and green</footer>
+                            <footer class="blockquote-footer">Example: Search 'rg' for cards that are red and green.</footer>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="card border-white">
                     <div class="card-header">How To Search By Type</div>
                         <div class="card-body">
-                            <p class="card-text">Find cards of a certain type by supertype, card type or subtype</p>
+                            <p class="card-text">Search by cards of a certain type, such as supertype, card type or subtype.</p>
                             <footer class="blockquote-footer">Example: Search 'creature' for a creature type or 'goblin' for a goblin subtype. </footer>
                         </div>
                     </div>
