--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -21,6 +21,9 @@ h1{
 .card-show{
     max-width: 50%;
 }
+.card-show a{
+   text-decoration: none;
+}
 .search-explain{
     margin-top: 20%;
     max-width: 980px;
@@ -129,11 +132,13 @@ h1{
     padding:5px 0px 5px 0px;
 }
 .card-release{
-    padding:5px 0px 5px 0px;  
+    padding:5px 0px 5px 0px; 
+    color: #966D2C;
 }
 .card-rarity{
     padding:5px 0px 5px 0px;  
+    color: #966D2C;
 }
 .decks-present{
-    margin:5px 0px 5px 0px; 
+    margin:20px 0px 5px 0px; 
 }
