--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -11,7 +11,7 @@
 }
 .individual-post-container {
     max-width: 800px;
-    background: rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.8);
     margin: 48px auto;
     text-align: center;
     border-radius:1em;
@@ -23,7 +23,7 @@ h1{
     text-align: center;
 }
 .new-post{
-    max-width: 500px;
+    width: 20%;
     margin: 0 auto;
 }
 .alert{
