--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -18,7 +18,8 @@ body{
     border-radius: 10px;
 }
 .form-signin .form-signin-heading, .form-signin{
-    margin-bottom: 30px;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .form-signin .form-control{
@@ -29,4 +30,8 @@ body{
 }
 .sr-only{
     margin-top: 10px;
+}
+.card{
+    background: rgba(255,255,245,0.85);
+    
 }
