--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -5,13 +5,13 @@
                 <%= image_tag @card.image, :class =>'card-img' %>
             </div>
             <div class="card-body card-show">
-                <h5 class="card-title card-title"><%=@card.title%></h5>
+                <h4 class="card-title card-title"><%=@card.title%></h4>
                 <h5 class="card-title card-price">Price: $<%=@card.price%> USD</h5>
-                <h6 class="card-subtitle mb-2 text-muted card-release">Release Date: <%=@card.release%></h6>
-                <h6 class="card-subtitle mb-2 text-muted card-rarity">Card Rarity: <%=@card.rarity%></h6>
+                <h6 class="card-subtitle mb-2 card-release">Release Date: <%=@card.release%></h6>
+                <h6 class="card-subtitle mb-2 card-rarity">Card Rarity: <%=@card.rarity%></h6>
                 <p class="card-text"><strong>Oracle Text:</strong> <%=@card.oracle%></p>
                 <%= link_to 'Delete card from Library', @card, :method => 'delete', :data => {:confirm => 'Are you sure?'}, :class =>"btn btn-outline-danger"%>
-                <h6 class="card-subtitle mb-2 text-muted decks-present">Present in these decks:</h6>
+                <h6 class="card-subtitle mb-2 text-muted decks-present">This card is in the following decks:</h6>
                 <%@decklists.each do |decklist|%>
                     <h6><%=link_to decklist.name, decklist, :class=>"link-info" %></h6>
                 <%end%>
