--- a/app/views/decklists/index.html.erb
+++ b/app/views/decklists/index.html.erb
@@ -1,4 +1,4 @@
-<h1><%=@current_user.email%>'s DECKLISTS</h1>
+<h1>My Decks</h1>
 
 <div class="container deck-index">
     <%@decklists.each do |decklist|%>
