--- a/app/views/session/new.html.erb
+++ b/app/views/session/new.html.erb
@@ -8,6 +8,6 @@
         <%= label_tag :password, 'Password', class: 'sr-only'%>
         <%= password_field_tag :password, nil, class: 'form-control',autocomplete: "off", placeholder: 'Password' %>
 
-        <%= submit_tag "Sign in", class:'session-btn btn-lg btn-primary btn-block'%>
+        <%= submit_tag "Sign in", class:'session-btn btn btn-lg btn-primary btn-block'%>
     <%end %>
 </div>
