--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,14 @@
 <h1>All Users</h1>
 
-<% @users.each do |user|%>
-<p><%= user.email %></p>
-<%end%>
+<div class="card bg-light mb-3" style="max-width: 18rem;">
+  <div class="card-header">All Users</div>
+  <div class="card-body">
+  <% @users.each do |user|%>
+    <p class="card-text"><%= user.email %></p>
+    <%end%>
+  </div>
+</div>
+
+
+
+
