--- a/app/assets/stylesheets/cards.scss
+++ b/app/assets/stylesheets/cards.scss
@@ -51,6 +51,7 @@ h1{
     justify-items: center;
     justify-content: center;
     margin:2% 5% 2% 5%;
+    padding-bottom: 2%;
 
 }
 .cards-container a{
