--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -12,12 +12,14 @@
 .individual-post-container {
     max-width: 800px;
     background: rgba(255,255,255,0.8);
-    margin: 48px auto;
+    margin: 0 auto;
     text-align: center;
     border-radius:1em;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     padding-bottom: 24px;
     padding-top: 24px;
+    margin-bottom: 1%;
+    margin-top: 1%;
 }
 h1{
     text-align: center;
