--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,7 +3,7 @@ height: 100%;
 }
 body{
     
-    background: url('background2.jpg') no-repeat center center fixed; 
+    background: url('background-v5.jpg') no-repeat center center fixed; 
     background-size: cover;
 }
 .wrapper{
