please work omg

--- a/app/views/decklists/show.html.erb
+++ b/app/views/decklists/show.html.erb
@@ -23,7 +23,7 @@
            <h5>Lands (<%=@landArray.length%>)</h5>
             <ul>
                 <%@landArray.each do |card|%>
-                <li class="deck-links"><li><%=link_to card.title, card%></li>
+                <li class="deck-links"><%=link_to card.title, card%></li>
                 <%end%>
             </ul>
         </div>
