--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,14 +14,14 @@
 
   <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-      <div class="container">
-        <%= link_to "Home", root_path, class:"navbar-brand"%>
+      <div class="container navcontainer">
+        <%= link_to image_tag('logo-v5.svg', :id=>'logo'),root_path%>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <%if @current_user.present?%>
             <%if @current_user.admin?%>
-              <li class="navitem"><%=link_to "All Users", users_path, class:"nav-link"%></li>
+              <li class="navitem"><%=link_to "All Users", users_path, class:"nav-link "%></li>
             <%end%>
                    
           <li class="navitem"><%=link_to "My Cards", cards_path, class:"nav-link"%></li>
