--- a/app/views/decklists/_form.html.erb
+++ b/app/views/decklists/_form.html.erb
@@ -17,6 +17,7 @@
         </div>
 
         <div class="row">
+
             <div class="edit-column col">
                 <h5>Creatures (<%=@creatureArray.length%>)</h5>
                 <div class="checkboxes">
@@ -25,6 +26,7 @@
                     <%end%>
                 </div>
             </div>
+
             <div class="edit-column col">
                 <h5>Lands (<%=@landArray.length%>)</h5>
                 <div class="checkboxes">
@@ -33,35 +35,47 @@
                     <%end%>
                 </div>
             </div>
-                <div class="edit-column col">
+
+            <div class="edit-column col">
                 <h5>Artifacts (<%=@artifactArray.length%>)</h5>
-                <%=f.collection_check_boxes(:card_ids, @artifactArray, :id, :title) do |b|%>
-                    <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
-                <%end%>
+                <div class="checkboxes">
+                    <%=f.collection_check_boxes(:card_ids, @artifactArray, :id, :title) do |b|%>
+                        <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
+                    <%end%>
+                </div>
             </div>
+
             <div class="edit-column col">
                 <h5>Enchantments (<%=@enchantmentArray.length%>)</h5>
-                <%=f.collection_check_boxes(:card_ids, @enchantmentArray, :id, :title) do |b|%>
-                    <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
-                <%end%>
+                <div class="checkboxes">
+                    <%=f.collection_check_boxes(:card_ids, @enchantmentArray, :id, :title) do |b|%>
+                        <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
+                    <%end%>
+                </div>
             </div>
             <div class="edit-column col">
                 <h5>Planeswalkers (<%=@planeswalkerArray.length%>)</h5>
-                <%=f.collection_check_boxes(:card_ids, @planeswalkerArray, :id, :title) do |b|%>
-                    <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
-                <%end%>
+                    <div class="checkboxes">
+                    <%=f.collection_check_boxes(:card_ids, @planeswalkerArray, :id, :title) do |b|%>
+                        <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
+                    <%end%>
+                </div>
             </div>
-                <div class="edit-column col">
+            <div class="edit-column col">
                 <h5>Instants (<%=@instantArray.length%>)</h5>
-                <%=f.collection_check_boxes(:card_ids, @instantArray, :id, :title) do |b|%>
-                    <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
-                <%end%>
+                <div class="checkboxes">
+                    <%=f.collection_check_boxes(:card_ids, @instantArray, :id, :title) do |b|%>
+                        <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
+                    <%end%>
+                </div>
            </div>
             <div class="edit-column col">
                 <h5>Sorceries (<%=@sorceryArray.length%>)</h5>
-                <%=f.collection_check_boxes(:card_ids, @sorceryArray, :id, :title) do |b| %>
-                    <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
-                <%end%>
+                <div class="checkboxes">
+                    <%=f.collection_check_boxes(:card_ids, @sorceryArray, :id, :title) do |b| %>
+                        <%= b.label(class:"label-checkbox") { b.check_box+" "+b.text } %>
+                    <%end%>
+                </div>
             </div>
         </div>
         <%=f.submit :class=>"btn btn-primary create-deck"%>   
