--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
 <%if @current_user.present? %>
         <%=link_to "New Post", new_post_path, class:"btn btn-outline-info new-post"%>
 <%end%>
-    <div class="container">
+    <div class="container home-feed">
         <%@posts.reverse_each do |post|%>
             <div class="individual-post-container container">
 
