--- a/app/views/cards/new.html.erb
+++ b/app/views/cards/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Find A New Card</h1>
 
-
+<!--serach form with select menu with search parameters-->
 <div class="search-form">
     <form action="/search">  
         <div class="wrapper-search">
@@ -11,7 +11,7 @@
                     <option value="type">Search by Type</option>
                 </select>
             </div>
-
+<!--Enter the card we're going to serach-->
             <div class="search-input">
                 <input type = "text" name="card" class="form-control form-input" placeholder="Enter search term..." required>
             </div>
@@ -21,7 +21,7 @@
         </div>
     </form>
 </div>
-
+<!--explaining how to use the search -->
 <div class="search-explain">
     <div class="row">
             <div class="col-sm-6 col-md-4">
