--- a/app/views/cards/show.html.erb
+++ b/app/views/cards/show.html.erb
@@ -1,4 +1,4 @@
-
+<!--show the card's information and all decks that the card exists in-->
     <div class="card">
         <div class="card-horizontal">
             <div class="img-square-wrapper">
