--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,23 +13,27 @@
   </head>
 
   <body>
+  <!--navigation bar-->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
       <div class="container navcontainer">
+      <!--Icon in left hand corner-->
         <%= link_to image_tag('logo-v5.svg', :id=>'logo'),root_path%>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navmenu">
         <ul class="navbar-nav ms-auto">
           <%if @current_user.present?%>
+          <!--allow access to the All Users index page if the user is an admin-->
             <%if @current_user.admin?%>
               <li class="navitem"><%=link_to "All Users", users_path, class:"nav-link "%></li>
             <%end%>
-                   
+
           <li class="navitem"><%=link_to "My Cards", cards_path, class:"nav-link"%></li>
           <li class="navitem"><%=link_to "Add Cards", new_card_path, class:"nav-link"%></li>
           <li class="navitem"><%=link_to "My Decks", decklists_path, class:"nav-link"%></li>
           <li class="navitem"><%=link_to "Add Deck", new_decklist_path, class:"nav-link"%></li>
           <li class="navitem"><%=link_to "Log Out-#{@current_user.email}", login_path, :method=>'delete', class:"nav-link"%></li>
         <%else%>
+          <!--if not logged in only allow access to sign up and login-->
           <li class="navitem"><%=link_to "Sign-Up", new_user_path, class:"nav-link"%></li>
           <li class="navitem"><%=link_to "Log In", login_path, class:"nav-link"%></li>
         <%end%>
