--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,3 +1,4 @@
+<!--form to create and edit a new post-->
 <div class="wrapper post-wrapper">
     <%= form_for @post, :html => {:class => "form-post", :multipart=>true} do |f| %>
         <%= f.label :title, 'Title', class: 'sr-only' %>
