--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <h1>All Users</h1>
-
+<!--all users emails viewable only by admin-->
 <div class="card bg-light mb-3" style="max-width: 18rem;">
   <div class="card-header">All Users</div>
   <div class="card-body">
