--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -7,7 +7,7 @@
         </div><!--sign up error message-->
     <% end %>
 <%end%>
-
+<!--form to create a new user-->
 <div class="wrapper">
     <%= form_for @user, :html => {:class => "form-signin"} do |f| %>
         <h2 class="form-signin-heading text-center">New User</h2>
